RESOLVED FIXED294645
[JSC] IPInt catch handler should not use generateThunkWithJumpToPrologue
https://bugs.webkit.org/show_bug.cgi?id=294645
Summary [JSC] IPInt catch handler should not use generateThunkWithJumpToPrologue
Yusuke Suzuki
Reported 2025-06-17 17:58:00 PDT
...
Attachments
Yusuke Suzuki
Comment 1 2025-06-17 17:58:01 PDT
Yusuke Suzuki
Comment 2 2025-06-17 18:00:02 PDT
EWS
Comment 3 2025-06-17 20:38:07 PDT
Committed 296357@main (fc8cbf62bbcd): <https://commits.webkit.org/296357@main> Reviewed commits have been landed. Closing PR #46878 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.