[JSC] IPInt catch handler should not use generateThunkWithJumpToPrologue https://bugs.webkit.org/show_bug.cgi?id=294645 rdar://149335739

Reviewed by Keith Miller.

IPInt catch handler should not use generateThunkWithJumpToPrologue as we
do not need to tag return address with sp in JIT code. Also we remove
useWasmJIT because this configuration is half-broken: we cannot disable
JIT thunk when JITCage is used, and IPInt / LLInt are relying on JIT
thunk when JITCage is enabled. Thus, we cannot just disable wasm JIT
when JS JIT is enabled (and JITCage is enabled).

* JSTests/wasm/stress/thread-safe-weak-or-strong-ptr-validate.js:
* Source/JavaScriptCore/llint/LLIntThunks.cpp:
(JSC::LLInt::inPlaceInterpreterEntryThunk):
(JSC::LLInt::inPlaceInterpreterSIMDEntryThunk):
* Source/JavaScriptCore/runtime/Options.cpp:
(JSC::disableAllWasmJITOptions):
(JSC::disableAllJITOptions):
(JSC::Options::notifyOptionsChanged):
* Source/JavaScriptCore/runtime/OptionsList.h:
* Source/JavaScriptCore/wasm/WasmCallee.cpp:
(JSC::Wasm::JSEntrypointCallee::entrypointImpl const):
* Source/JavaScriptCore/wasm/WasmEntryPlan.cpp:
(JSC::Wasm::EntryPlan::generateWasmToWasmStubs):
(JSC::Wasm::EntryPlan::generateWasmToJSStubs):
* Source/JavaScriptCore/wasm/WasmIPIntPlan.cpp:
(JSC::Wasm::IPIntPlan::compileFunction):
* Source/JavaScriptCore/wasm/WasmLLIntPlan.cpp:
(JSC::Wasm::LLIntPlan::compileFunction):
* Source/JavaScriptCore/wasm/js/JSToWasm.cpp:
(JSC::Wasm::FunctionSignature::jsToWasmICEntrypoint const):
* Tools/Scripts/run-jsc-stress-tests:

Canonical link: https://commits.webkit.org/296357@main