JSTests/wasm/stress/thread-safe-weak-or-strong-ptr-validate.js
@@ -1,3 +1,5 @@
+//@ $skipModes << "wasm-no-wasm-jit".to_sym
+// BBQ / OMG is required
 function instantiate(moduleBase64, importObject) {
     let bytes = Uint8Array.fromBase64(moduleBase64);
     return WebAssembly.instantiate(bytes, importObject);
